css/lizstyle.css
body {
	background-color: #fff;
	font-size: 110%;
	font-family: 'Yantramanav', sans-serif;
}

.container-teal {
	background-color: #1e656d;
	padding: 3%;
}

.hello {
	font-size: 300%;
	padding: 10% 0;
}

h1 {
	margin-bottom: 2%;
	text-align: center;
	font-weight: bold;
	padding-bottom: 3%;
	color: #00293C;
}

h3 {
	text-align: center;
	font-weight: bolder;
	color: #00293C;
	margin-top: 7%;
}

p {
	font-size: 110%;
	color: #00293C;
}

embed {
	height: 700px;
}

.navbar {
	background-color: #fff;
	opacity: 1;
	z-index: 5;
	width: 100%;
	font-size: 120%;
}

.insta {
	margin: 8px 5px 0 8px;
}

.profile-rounded {
	opacity: 1;
	margin: 1%;
	border-radius: 10px;
}

#spacer {
	margin: 60px;
}

.logos {
	width: 70%;
	margin: 10%;
	padding: 1%;
}

.hello-col {
	padding: 10% 0;
}

/* Make the links look cool */
a:link {
	color: black;
	text-decoration: none;
	font-weight: bold;
	font-size: 110%;
	}
a:visited {
	color: black;
	text-decoration: none;
	}
a:hover {
	opacity: .5;
	text-decoration: none;
	}

.projects {
	background-color: #fff;
	opacity: .9;
	text-align: center;
}

.grid-container, .grid-container-logos {
	display: grid;
	justify-content: space-around;
	grid-template-columns: auto auto auto auto;
  }

.grid-container-logos {
	justify-items: center;
}

.grid-item {
	margin: 3%;
}

.portfolio {
	border: 4px solid #fff;
}

.blurbs {
	border: 4px solid #f62a00;
	background-color: #fff;
	padding: 3%;
	opacity: .9;
	border-radius: 30px;
	text-align: center;
}

form {
	text-align: center;
}

input, textarea {
	border-radius: 20px;
	border-top: none;
	border-left: none;
	border-right: none;
	border-bottom: solid 2px #f62a00;
	width: 50%;
	margin: 2% 10%;
}

input:focus, textarea:focus {
	background-color: #cbe1e4;
}

footer {
	margin: 0 35%;
	font-size: 90%;
	color: #00293C;
	text-align: center;
}

/* Medium devices (tablets, 768px and smaller) */
@media (max-width: 767.98px) {
	body {
		/* background-image: url("../images/birdsmobile.jpg");  */
		background-attachment: fixed;
	}
	.grid-container {
		display: grid;
		grid-template-columns: auto auto;
	}
	input, textarea {
		width: 100%;
		margin: 4% 1%;
	}
	.grid-spacer {
		display: none;
	}
	.lets-work {
		margin-top: 22%;
	}
	.headshot {
		flex: right;
	}
	.hello {
		font-size: 200%;
		padding: 10% 5%;
	}
}
/* Most mobile phones */
@media (max-width: 517.98px) {
	.grid-container {
		display: grid;
		grid-template-columns: auto;
	  }
	embed {
		height: 400px;
	}
	.grid-container-logos{
		display: grid;
		grid-template-columns: auto auto;
	}
}

